#libunitincludedir is exported from configure.ac - we need it so that .pc file can
# have the value too
libunitinclude_HEADERS = include/unitmanip.h          include/quantity.h       \
                         include/cmath.h              include/units/SI.h       \
                         include/units/imperial.h
pkgconfigdir = $(libdir)/pkgconfig
nodist_pkgconfig_DATA = libunit.pc
